--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,36 +1,21 @@
-name: Deploy to S3
+name: Upload Website
 
 on:
   push:
     branches:
-      - main  # Deploy when changes are pushed to the main branch
+    - master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
+    - uses: actions/checkout@master
+    - uses: jakejarvis/s3-sync-action@master
       with:
-        node-version: '18.x'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build project
-      run: npm run build
-
-    - name: Deploy to S3
-      uses: aws-actions/s3-sync-action@v0.5.0  # Correct action version
-      with:
-        args: --acl public-read --delete
-        source-dir: './dist'  # The directory containing your build output
-        bucket: ${{ secrets.S3_BUCKET_NAME }}  # Your S3 bucket name
+        args: --follow-symlinks --delete --exclude '.git*/*'
       env:
+        SOURCE_DIR: ./
+        AWS_REGION: us-east-1
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: 'us-east-1'  # Replace with your bucket’s region
